--- a/TeamZenithGatewayUI/WebContent/bootStrap/css/landing-page.css
+++ b/TeamZenithGatewayUI/WebContent/bootStrap/css/landing-page.css
@@ -29,7 +29,13 @@ h6 {
     font-size: 18px;
     font-weight: 400;
 }
-
+.navbar-brand-custom {
+	float:left;
+	height:50px;
+	padding:15px 15px;
+	font-size:18px;
+	line-height:20px
+}
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
@@ -94,13 +100,14 @@ h6 {
 
 .content-section-a {
     padding: 50px 0;
-    background-color: #f8f8f8;
+    background-color: #ffe4e1;
 }
 
 .content-section-b {
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
+    background-color: #ffffed;
 }
 
 .section-heading {
