--- a/TeamZenithGatewayUI/WebContent/bootStrap/css/landing-page.css
+++ b/TeamZenithGatewayUI/WebContent/bootStrap/css/landing-page.css
@@ -36,13 +36,23 @@ h6 {
 	font-size:18px;
 	line-height:20px
 }
+
+.myBackground {
+  background-color: rgba(255,255,255, 0.5);
+  color: inherit;
+}
+
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/45544/background-svg.svg) no-repeat center center;
     background-size: cover;
+}
+
+.transparent{
+  background: rgba(122, 130, 136, 0.2)!important;
 }
 
 .intro-message {
@@ -100,14 +110,14 @@ h6 {
 
 .content-section-a {
     padding: 50px 0;
-    background-color: #ffe4e1;
+    background-color: #bbdddd;
 }
 
 .content-section-b {
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
-    background-color: #ffffed;
+    background-color: bbd5dd;
 }
 
 .section-heading {
@@ -123,7 +133,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/45544/background-svg.svg) no-repeat center center;
     background-size: cover;
 }
 
