UI  Changes with new bootstrap Theme - Table not implemented yet

--- a/GatewayApp/src/main/resources/templates/home3.html
+++ b/GatewayApp/src/main/resources/templates/home3.html
@@ -1,46 +1,25 @@
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<!--/*/ <th:block th:include="fragments/head :: head"/> /*/-->
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
- <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css"/>
-        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
-        <link rel="stylesheet" href="bootstrap/font-awesome/css/font-awesome.min.css" type="text/css"/>
-            <!-- Plugin JavaScript -->
-    <script src="bootstrap/js/jquery.easing.min.js"></script>
-    <script src="bootstrap/js/jquery.fittext.js"></script>
-    <script src="bootstrap/js/wow.min.js"></script>
-      <link rel="stylesheet" href="bootstrap/css/animate.min.css" type="text/css"/>
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="bootstrap/css/creative.css" type="text/css"/>
+<body id="page-top">
 
-    <!-- Custom Theme JavaScript -->
-    <script src="bootstrap/js/creative.js"></script>
-</head>
-<body>
-	<!-- Navigation -->
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix">	
-	<div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->		
-			    <div class="navbar-header">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-			<a class="navbar-brand " href="#">Science Gateway</a>
-			<a class="navbar-brand page-scroll" th:if="${account}" th:inline="text">Hello, [[${account.fullName}]]!</a>
-		</div>
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <a class="navbar-brand page-scroll" href="#page-top">Science Gateway</a>
+                <a class="navbar-brand" th:if="${account}" th:inline="text">Hello, [[${account.fullName}]]!</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -49,51 +28,27 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                    <li><a th:if="${account}" th:href="@{/logout}" class="btn">Logout</a></li>
+                    <li><a th:if="${account}" th:href="@{/logout}" class="btn btn-danger">Logout</a></li>
                 </ul>
             </div>
-		<!-- /.navbar-collapse -->
-	</div>
-	<!-- /.container --> </nav>
-
-
-
-	<!-- Header -->
- <header>
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1>Science Gateway</h1>
-                
-                <p>A job schedkuler for Karst computer structure by Team	Zenith</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Previous Job History</a>
-            </div>
+            <!-- /.navbar-collapse -->
         </div>
-    </header>
+        <!-- /.container-fluid -->
+    </nav>
 
-
-   <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
-                    
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
+ 
+ 
     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary"></hr>
+                    <hr class="primary">
                 </div>
             </div>
         </div>
@@ -101,15 +56,24 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-share wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                         <h3>Job Creation</h3>
-                        <p class="text-muted">Create and
+                        <p class="text-muted">This service will allow you to create and
 						submit job on Karst computing cluster</p>
 						<button type="button" class="btn btn-primary btn-lg"
 						data-toggle="modal" data-target="#myModal">
 						<i class="glyphicon glyphicon-cloud-upload"></i> <span
 							class="network-name">Create Job</span>
 					</button>
+					
+					
+					
+					
+					
+					
+					
+					
+					
 					<!-- Job submit request form -->
 					<div id="myModal" class="modal fade" role="dialog">
 						<div class="modal-dialog">
@@ -225,6 +189,9 @@
 						</div>
 
 					</div>
+				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+					<img class="img-responsive" src="@{/templates/bootstrap/img/ipad.jpg}" alt=""></img>
+				</div>
 
 			<!-- Job submission response modal -->
 			<div class="modal fade" id="responseModal" role="dialog">
@@ -246,10 +213,20 @@
 				</div>
 			</div>
 
-
+					
+					
+				
+					
+					
+					
+					
+					
+					
+					
+					
                     </div><!-- End Submit Job Div -->
                 </div>
-                                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Job Monitoring</h3>
@@ -260,6 +237,12 @@
 						<i class="glyphicon glyphicon-cloud-upload"></i> <span
 							class="network-name">Get Job Status</span>
 					</button>
+					
+					
+					
+					
+					
+									
 					<!-- Job monitor request form -->
 					<div class="modal fade" id="jobMonitorForm" role="dialog">
 						<div class="modal-dialog">
@@ -318,9 +301,60 @@
 						</div>
 					</div>
 
+				<div class="col-lg-5 col-sm-pull-6  col-sm-6">
+					<img class="img-responsive" src="bootstrap/img/dog.jpg" alt=""></img>
+				</div>
+					
+					
+					
+					
+		
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
                     </div><!-- end service box 2 -->
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
                 </div><!-- end sec 2 -->
-                  <div class="col-lg-3 col-md-6 text-center">
+                
+                
+                
+                <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Job Cancellation</h3>
@@ -395,9 +429,9 @@
                 </div><!-- end sec 3 -->
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-file-archive-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Download Output Files</h3>
-                        <p class="text-muted">Download output files(.zip) of completed jobs</p>
+                        <p class="text-muted">Download output files of completed jobs</p>
                         <button type="button" class="btn btn-primary btn-lg"
 						data-toggle="modal" data-target="#jobDownload">
 						<i class="glyphicon glyphicon-cloud-upload"></i> <span
@@ -473,16 +507,118 @@
         </div>
     </section>
 
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Free Download at Start Bootstrap!</h2>
+                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+            </div>
+        </div>
+    </aside>
 
-
-	<a name="contact"></a>
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary"></hr>
+                    <hr class="primary">
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
@@ -497,26 +633,20 @@
         </div>
     </section>
 
-	<!-- Footer -->
-	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<ul class="list-inline">
-					<li><a href="#">Home</a></li>
-					<li class="footer-menu-divider">&sdot;</li>
-					<li><a href="#about">About</a></li>
-					<li class="footer-menu-divider">&sdot;</li>
-					<li><a href="#services">Services</a></li>
-					<li class="footer-menu-divider">&sdot;</li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-				<p class="copyright text-muted small">Copyright &copy; Your
-					Company 2014. All Rights Reserved</p>
-			</div>
-		</div>
-	</div>
-	</footer>
+    <!-- jQuery 
+    <script src="js/jquery.js"></script>-->
+
+    <!-- Bootstrap Core JavaScript
+    <script src="js/bootstrap.min.js"></script> -->
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
 
 </body>
+
 </html>
