--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -17,9 +17,10 @@
     <script src="bootstrap/js/jquery.fittext.js"></script>
     <script src="bootstrap/js/wow.min.js"></script>
       <link rel="stylesheet" href="bootstrap/css/animate.min.css" type="text/css"/>
-
+      <script src="bootstrap/js/bootstrap-table.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="bootstrap/css/creative.css" type="text/css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-table.css" type="text/css"/>
 
     <!-- Custom Theme JavaScript -->
     <script src="bootstrap/js/creative.js"></script>
@@ -81,6 +82,16 @@
                     
                     <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    
+                    <table data-toggle="table" data-url="" data-height="299">
+    				<thead>
+        			<tr>
+            		<th data-field="id">Item ID</th>
+            		<th data-field="name">Item Name</th>
+            		<th data-field="price">Item Price</th>
+        			</tr>
+    				</thead>
+					</table>
                 </div>
             </div>
         </div>
