--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -78,13 +78,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Previous Job History</h2>
                     
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-                    
-                    <table data-toggle="table" data-url="" data-height="299">
-    				<thead>
+                    <p class="text-faded">Press Refresh Button to get the latest update</p>
+                    <a href="#" class="btn btn-default btn-xl">Refresh!</a>
+ 					<hr></hr>         
+                    <table data-toggle="table" data-url="" data-height="299" style="background-color: white;">
+    				<thead style="background-color: white;">
         			<tr>
             		<th data-field="id">Item ID</th>
             		<th data-field="name">Item Name</th>
