Updated REST URL

--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css"/>
         <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic" rel='stylesheet' type='text/css'/>
         <link rel="stylesheet" href="bootstrap/font-awesome/css/font-awesome.min.css" type="text/css"/>
             <!-- Plugin JavaScript -->
     <script src="bootstrap/js/jquery.easing.min.js"></script>
@@ -21,7 +21,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="bootstrap/css/creative.css" type="text/css"/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap-table.css" type="text/css"/>
-
+	<script type="text/javascript" src = "bootstrap/js/app.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="bootstrap/js/creative.js"></script>
 </head>
