Adding changes for envType

--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -371,11 +371,11 @@
 											</fieldset>
 
 
-											<fieldset class="form-group">
-												<label for="sysType">System Type</label> <select
-													id="sysType_js" name="sysType_js" style="width: 212px;">
-													<option value="K">Karst</option>
-													<option value="B">Big Red II</option>
+										<fieldset class="form-group">
+												<label for="execEnv">System Type</label> <select
+													id="execEnv" name="execEnv" style="width: 212px;">
+													<option value="Karst">Karst</option>
+													<option value="Bigred2">Big Red II</option>
 												</select>
 											</fieldset>
 
@@ -459,10 +459,10 @@
 													placeholder="Enter the job ID Ex: 1242254" name="jobNumber"></input>
 											</fieldset>
 											<fieldset class="form-group">
-												<label for="sysType">System Type</label> <select
-													id="sysType_cj" name="sysType_cj" style="width: 212px;">
-													<option value="K">Karst</option>
-													<option value="B">Big Red II</option>
+												<label for="execEnv">System Type</label> <select
+													id="execEnv" name="execEnv" style="width: 212px;">
+													<option value="Karst">Karst</option>
+													<option value="Bigred2">Big Red II</option>
 												</select>
 											</fieldset>
 											<button type="submit" class="btn btn-primary"
@@ -540,10 +540,10 @@
 													placeholder="Enter the job Name" name="jobName"></input>
 											</fieldset>
 											<fieldset class="form-group">
-												<label for="sysType">System Type</label> <select
-													id="sysType_jd" name="sysType_jd" style="width: 212px;">
-													<option value="K">Karst</option>
-													<option value="B">Big Red II</option>
+												<label for="execEnv">System Type</label> <select
+													id="execEnv" name="execEnv" style="width: 212px;">
+													<option value="Karst">Karst</option>
+													<option value="Bigred2">Big Red II</option>
 												</select>
 											</fieldset>
 											<fieldset class="form-group">
@@ -620,6 +620,7 @@
 						<li class="footer-menu-divider">&sdot;</li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
+					<hr></hr>
 					<p class="copyright text-muted small">Copyright &copy; Your
 						Company 2016. All Rights Reserved</p>
 				</div>
