Changes to DB query

--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -97,13 +97,19 @@
 						update</p>
 					<a href="#" class="btn btn-default btn-xl">Refresh!</a>
 					<hr></hr>
-					<table data-toggle="table" data-url="" data-height="299"
+					<table data-toggle="table" data-url="fetchjob?username=[[${account.userName}]]" data-height="299"
 						style="background-color: white;">
 						<thead style="background-color: white;">
 							<tr>
-								<th data-field="id">Item ID</th>
-								<th data-field="name">Item Name</th>
-								<th data-field="price">Item Price</th>
+								<th data-field="JobDataId">Item ID</th>
+								<th data-field="JobId">Item Name</th>
+								<th data-field="JobName">Item Price</th>
+								<th data-field="Nodes">Item Price</th>
+								<th data-field="Ppn">Item Price</th>
+								<th data-field="WallTime">Item Price</th>
+								<th data-field="JobFileName">Item Price</th>
+								<th data-field="CompilerFlag">Item Price</th>
+								
 							</tr>
 						</thead>
 					</table>
