--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -98,8 +98,8 @@
 					<a href="#" class="btn btn-default btn-xl">Refresh!</a>
 					<hr></hr>
 					<table id = "table"
-						style="background-color: white;">
-						<thead style="background-color: white;">
+						style="background-color: white; border-width: 0px;">
+						<thead style="background-color: white; border-width: 0;border-collapse: collapse;" >
 						<!--    <tr>
         <th data-field="name">Name</th>
         <th data-field="stargazers_count">Stars</th>
@@ -109,14 +109,14 @@
 						
 						<tr>
 								<th data-field="jobDataId">Item ID</th>
-								<th data-field="jobId">Item Name</th>
-								<th data-field="jobName">Item Price</th>
-								<th data-field="nodes">Item Price</th>
-								<th data-field="ppn">Item Price</th>
-								<th data-field="wallTime">Item Price</th>
-								<th data-field="jobFileName">Item Price</th>
-								<th data-field="jobPath">Item Price</th>
-								<th data-field="jobType">Item Price</th>						
+								<th data-field="jobId">Job Id</th>
+								<th data-field="jobName">Job Name</th>
+								<th data-field="nodes">Nodes</th>
+								<th data-field="ppn">PPN</th>
+								<th data-field="wallTime">Walltime</th>
+								<th data-field="jobFileName">Filename</th>
+								<!-- <th data-field="jobPath">Job Path</th> -->
+								<th data-field="jobType">Job Type</th>						
 							</tr>
 						</thead>
 					</table>
