--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -1,4 +1,3 @@
-
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
@@ -32,7 +31,8 @@
 <script src="bootstrap/js/bootstrap-table.js"></script>
 <!-- Custom CSS -->
 <link rel="stylesheet" href="bootstrap/css/creative.css" type="text/css" />
-<link rel="stylesheet" href="bootstrap/css/bootstrap-table.css"	type="text/css" />
+<link rel="stylesheet" href="bootstrap/css/bootstrap-table.css"
+	type="text/css" />
 <script type="text/javascript" src="bootstrap/js/app.js"></script>
 <script type="text/javascript" src="bootstrap/js/test.js"></script>
 
@@ -79,6 +79,10 @@
 				<h1>Science Gateway</h1>
 
 				<p>A job scheduler for Karst computer structure by Team Zenith</p>
+				
+				<p class = "hidden" id="username" th:if="${account}"
+					th:inline="text">[[${account.username}]]</p>
+				
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Previous
 					Job History</a>
 			</div>
@@ -96,41 +100,22 @@
 						update</p>
 					<a href="#" class="btn btn-default btn-xl">Refresh!</a>
 					<hr></hr>
-<<<<<<< HEAD
-					<table id="table"
-						style="background-color: white; border-width: 0px;">
-						<thead
-							style="background-color: white; border-width: 0; border-collapse: collapse;">
-							<tr>
-=======
-					<table id = "table"
-						style="background-color: white; border-width: 0px;">
-						<thead style="background-color: white; border-width: 0;border-collapse: collapse;" >
-						<!--    <tr>
-        <th data-field="name">Name</th>
-        <th data-field="stargazers_count">Stars</th>
-        <th data-field="forks_count">Forks</th>
-        <th data-field="description">Description</th>
-    </tr>-->
-						
-						<tr>
->>>>>>> 86fae138fa5a10c3a1f2fdd43bdbef9c7f2efab7
-								<th data-field="jobDataId">Item ID</th>
-								<th data-field="jobId">Job Id</th>
-								<th data-field="jobName">Job Name</th>
-								<th data-field="nodes">Nodes</th>
-								<th data-field="ppn">PPN</th>
-								<th data-field="wallTime">Walltime</th>
-								<th data-field="jobFileName">Filename</th>
-								<!-- <th data-field="jobPath">Job Path</th> -->
-<<<<<<< HEAD
-								<th data-field="jobType">Job Type</th>
-=======
-								<th data-field="jobType">Job Type</th>						
->>>>>>> 86fae138fa5a10c3a1f2fdd43bdbef9c7f2efab7
-							</tr>
-						</thead>
-					</table>
+					<div class="table-responsive">
+						<table id="table" class="table">
+							<thead>
+								<tr>
+									<th data-field="jobDataId">Job Name</th>
+									<th data-field="jobId">Job Type</th>
+									<th data-field="jobName">wallTime</th>
+									<th data-field="nodes">jobId</th>
+									<th data-field="ppn">jobStatus</th>
+									<th data-field="wallTime">ppn</th>
+									<th data-field="jobFileName">nodes</th>
+								</tr>
+							</thead>
+							<tbody id="jobData"></tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
